2006-08-22 [colin]	2.4.0cvs74

	* configure.ac
		Require libetpan 0.46 (crasher fix when built
		against gnutls)

2006-08-22 [colin]	2.4.0cvs73

	* src/folder.c
		Set folder's mtime after writing its
		cache
	* src/folderview.c
		Add some timing
	* src/procmsg.c
		Don't do useless stuff if we don't 
		thread by subject
	* src/summaryview.c
		Add some timing, don't deselect prior
		to selecting (gtksctree does it itself),
		remove crash avoidance hacks as it's been
		properly fixed since a while
	* src/common/utils.c
		Optimize to_human_readable(): _() is slow,
		do it only once, and avoid %f format for KB
		(the most common in a summaryview)
	* src/gtk/gtksctree.c
		Don't uselessly freeze/thaw (fixes flicker
		on next unread and friends), reduce number
		of g_list_nth/g_list_position where possible
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
		Reduce number of g_list_nth/g_list_position
		where possible.
		All of this makes loading as 70k folder 2.1
		seconds instead of 3.2 (with hot FS caches).
		(1.3 seconds without Date and Size columns...)

2006-08-22 [paul]	2.4.0cvs72

	wrap documents and do some items from mones' MANUAL-TODO:

	* manual/account.xml
		4.1. = fix tabname references to <quote>tabname</quote>
		4.2. = fix "xxx" and 'xxx' items to <quote>xxx</quote>
	* manual/faq.xml
		1.1. = mentioned options don't match UI
		Add information about the 'Never send Return Receipts'
		option
	* manual/handling.xml
		6.2. = Mentions Extended symbols button, but now is
		named Information
		6.3. = Mentions ... button, which is now Edit

2006-08-22 [colin]	2.4.0cvs71

	* src/gtk/pluginwindow.c
		Fix layout in verbose translations (such
		as french)

2006-08-22 [paul]	2.4.0cvs70

	* manual/Makefile.am
		build manuals in alphabetical order
	* src/addressbook.c
	* src/prefs_themes.c
		replace/remove deprecated symbols
	* src/gtk/gtkutils.c
		fix a warning
	* src/gtk/pluginwindow.c
		replace deprecated symbol
		replace label text and move it